<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/pr_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/name_value"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textIsSelectable="true" 
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/operator"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/pr_operator"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/operator_value"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/district"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/pr_district"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/district_value"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/address"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/pr_address"
        android:textAppearance="?android:attr/textAppearanceMedium" />
        

    <TextView
        android:id="@+id/address_value"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textIsSelectable="true" 
       	android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/homepage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/pr_homepage"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/homepage_value"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:linksClickable="true"
        android:textIsSelectable="true"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/navigate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Navigate" />

</LinearLayout>